src/v7/CAPI_Loads.pas


function Loads_Get_Yearly():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Loads_Get_Yearly_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Loads_Set_AllocationFactor(Value: Double);cdecl;
begin
  Set_Parameter ('AllocationFactor', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Cfactor(Value: Double);cdecl;
begin
  Set_Parameter ('Cfactor', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Class_(Value: Integer);cdecl;
begin
  Set_Parameter ('Class', IntToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_CVRcurve(const Value: PAnsiChar);cdecl;
begin
  Set_Parameter ('CVRcurve', Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_CVRvars(Value: Double);cdecl;
begin
  Set_Parameter ('CVRvars', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_CVRwatts(Value: Double);cdecl;
begin
  Set_Parameter ('CVRwatts', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_daily(const Value: PAnsiChar);cdecl;
begin
  Set_Parameter ('Daily', Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_duty(const Value: PAnsiChar);cdecl;
begin
  Set_Parameter ('Duty', Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Growth(const Value: PAnsiChar);cdecl;
begin
  Set_Parameter ('Growth', Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_IsDelta(Value: WordBool);cdecl;
var
  elem: TLoadObj;
begin
  elem := ActiveLoad;
  if elem <> nil then elem.Connection := Integer (Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_kva(Value: Double);cdecl;
begin
  Set_Parameter ('kva', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_kwh(Value: Double);cdecl;
begin
  Set_Parameter ('kwh', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_kwhdays(Value: Double);cdecl;
begin
  Set_Parameter ('kwhdays', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Model(Value: Integer);cdecl;
var
  elem: TLoadObj;
begin
  elem := ActiveLoad;
  if elem <> nil then elem.FLoadModel := Value; // enums match the integer codes
end;
//------------------------------------------------------------------------------
procedure Loads_Set_NumCust(Value: Integer);cdecl;
begin
  Set_Parameter ('NumCust', IntToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_PctMean(Value: Double);cdecl;
begin
  Set_Parameter ('%mean', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_PctStdDev(Value: Double);cdecl;
begin
  Set_Parameter ('%stddev', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Rneut(Value: Double);cdecl;
begin
  Set_Parameter ('Rneut', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Spectrum(const Value: PAnsiChar);cdecl;
begin
  Set_Parameter ('Spectrum', Value);
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Status(Value: Integer);cdecl;
begin
  case Value of
    dssLoadVariable: Set_Parameter('status', 'v');
    dssLoadFixed: Set_Parameter('status', 'f');
    dssLoadExempt: Set_Parameter('status', 'e');
  end;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Vmaxpu(Value: Double);cdecl;
begin
  Set_Parameter ('VmaxPu', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Vminemerg(Value: Double);cdecl;
begin
  Set_Parameter ('VminEmerg', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Vminnorm(Value: Double);cdecl;
begin
  Set_Parameter ('VminNorm', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Vminpu(Value: Double);cdecl;
begin
  Set_Parameter ('VminPu', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_xfkVA(Value: Double);cdecl;
begin
  Set_Parameter ('XfKVA', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Xneut(Value: Double);cdecl;
begin
  Set_Parameter ('Xneut', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Yearly(const Value: PAnsiChar);cdecl;
begin
  Set_Parameter ('Yearly', Value);
end;
//------------------------------------------------------------------------------
PROCEDURE Loads_Get_ZIPV(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;
  elem:TLoadObj;
  k:Integer;

Begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    Result[0] := 0.0;  // error condition: one element array=0
    elem := ActiveLoad;
    IF elem <> Nil THEN
    Begin
         DSS_RecreateArray_PDouble(Result, ResultPtr, ResultCount, (elem.nZIPV-1) + 1);
         For k:=0 to elem.nZIPV-1 Do
              Result[k] := elem.ZipV^[k+1];
    End ;

end;
//------------------------------------------------------------------------------
procedure Loads_Set_ZIPV(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
  elem:TLoadObj;
  i, k, LoopLimit: Integer;

begin
    Value := PDoubleArray(ValuePtr);
    elem := ActiveLoad;
    If elem <> nil Then
    Begin
         // allocate space for 7
         elem.nZIPV := 7;
         // only put as many elements as proviced up to nZIPV
         LoopLimit := (ValueCount - 1);
         If (LoopLimit - (0) + 1) > 7 Then   LoopLimit :=  (0) + 6;

         k := 1;
         for i := (0) to LoopLimit do
         Begin
             elem.ZIPV^[k] := Value[i];
             inc(k);
         End;
    End;
end;
//------------------------------------------------------------------------------
function Loads_Get_pctSeriesRL():Double;cdecl;
Var
  elem:TLoadObj;

begin
       Result := -1.0; // signify  bad request
       elem := ActiveLoad;
       If elem <> nil Then
       Begin
           Result := elem.puSeriesRL * 100.0;
       End;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_pctSeriesRL(Value: Double);cdecl;
Var
  elem:TLoadObj;

begin
       elem := ActiveLoad;

       If elem <> nil Then
       Begin
            elem.puSeriesRL  := Value / 100.0;
       End;
end;
//------------------------------------------------------------------------------
function Loads_Get_RelWeight():Double;cdecl;
var
  elem: TLoadObj;
begin
  Result := 0.0;
  elem := ActiveLoad;
  if elem <> nil then Result := elem.RelWeighting;

end;
//------------------------------------------------------------------------------
procedure Loads_Set_RelWeight(Value: Double);cdecl;
var
  elem: TLoadObj;
begin
  elem := ActiveLoad;
  if elem <> nil then elem.RelWeighting := Value;
end;
//------------------------------------------------------------------------------
END.
